--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+body{
+    background-color: cadetblue;
+}
+
 h1{
     text-align: center;
     text-decoration: underline;
@@ -42,7 +46,18 @@ td, tr{
 
 table{
     text-align: center;
+    margin-left: 40%;
 }
 li{
+    font-size: 24px;
+    font-family: cursive;
+
+
+}
+
+p{
     font-size: 18px;
+    font-family: cursive;
+    text-align: justify;
+    
 }
