--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,11 @@ h1{
     font-size: 48px;
 }
 
+h2{
+    text-align: center;
+    font-family: cursive;
+}
+
 #copyright{                 
     transition: transform 50s ease-in-out;
 }
