--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,12 +32,19 @@ footer {
 
 th{
     font-size: 20px;
+    width: 150px;
 
 }
 
 td{
     border: 2px solid black;
 
+}
+
+.gitloc{
+   font-size: xx-large;
+  color: aliceblue;
+  text-decoration: underline overline;
 }
 
 .begone{
@@ -47,6 +54,17 @@ td{
 
 .tempgone{
     border: none;
+}
+
+#lowright{
+    opacity: 0;
+}
+#upmid{
+    opacity: 0;
+}
+
+#hideOrigin{
+    opacity: 0;
 }
 
 td, tr{
@@ -59,7 +77,7 @@ table{
     margin-left: 40%;
 }
 li{
-    font-size: 24px;
+    font-size: 23px;
     font-family: cursive;
 
 
@@ -70,6 +88,12 @@ p{
     font-family: cursive;
     text-align: justify;
     
+}
+
+.visible {
+    font-weight: bolder;
+    text-decoration: underline;
+    color: chartreuse;
 }
 
 div{
