--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,15 @@ h2{
     font-family: cursive;
 }
 
+h3{
+    color: red;
+    font-size: 24px;
+    font-family: cursive;
+    position: fixed;
+    bottom: 32%;
+    
+}
+
 #copyright{                 
     transition: transform 50s ease-in-out;
 }
@@ -75,7 +84,8 @@ td, tr{
 table{
     float: left;
     text-align: center;
-    margin-right: 50px;
+    margin-right: 200px;
+    margin-bottom: 80px;
 }
 li{
     font-size: 23px;
