getting there but cursor is being odd

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,12 +101,13 @@ p{
     
 }
 
-.visible {
-    font-weight: bolder;
-    text-decoration: underline;
+.visible2 {
+
     color: chartreuse;
     cursor: pointer;
 }
+
+
 
 div{
     padding-left: 150px;
