--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,8 @@ h3{
     font-size: 24px;
     font-family: cursive;
     position: fixed;
-    bottom: 32%;
+    bottom: 45%;
+    left: 1%;
     
 }
 
@@ -88,14 +89,14 @@ table{
     margin-bottom: 80px;
 }
 li{
-    font-size: 23px;
+    font-size: 20px;
     font-family: cursive;
 
 
 }
 
 p{
-    font-size: 18px;
+    font-size: 16px;
     font-family: cursive;
     text-align: justify;
     
